--- a/src/main.scss
+++ b/src/main.scss
@@ -65,8 +65,12 @@
   color: var(--main-dark);
 }
 .p {
-  color: var(--main-color);
+  color: var(--main-dark);
   font-family: poppins;
+}
+.err {
+  font-family: poppins;
+  color: red;
 }
 .chk-text {
   color: var(--chk-color);
@@ -142,4 +146,26 @@
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+
+  .modal-container {
+    position: relative;
+    overflow: hidden;
+    height: fit-content;
+    background-color: #145858;
+  }
+  .err-modal {
+    background: white;
+  }
 }
